--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
             tools:ignore="MissingConstraints">
 
             <EditText
+                android:id="@+id/search_edittext"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -32,17 +33,20 @@
                 android:hint="검색어를 입력해주세요"
                 android:padding="10dp"
                 android:textSize="20sp"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
+                android:id="@+id/search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
                 android:backgroundTint="#00000000"
                 android:text="search"
+                android:onClick="@{() ->vm.onSearchClick()}"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -55,6 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:recyclerView="@{vm.mainAdapter}"
+            app:scrollListener="@{vm.scrollListenerEvent}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/search_layout"
