--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -17,7 +17,9 @@
             android:id="@+id/search_layout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/search_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,8 +34,8 @@
                 android:layout_marginEnd="32dp"
                 android:hint="검색어를 입력해주세요"
                 android:padding="10dp"
-                android:textSize="20sp"
                 android:textColor="@color/black"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +47,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
                 android:backgroundTint="#00000000"
-                android:text="search"
                 android:onClick="@{() ->vm.onSearchClick()}"
+                android:text="search"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
