--- a/presentation/src/main/res/layout/item_info.xml
+++ b/presentation/src/main/res/layout/item_info.xml
@@ -8,6 +8,7 @@
             type="com.example.stats.model.BasicModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main_item"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginBottom="5dp">
