--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -25,6 +25,9 @@
             android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            app:menu="@menu/bottom_navi_menu"
+            app:itemTextColor="@color/black"
+            android:background="@color/white"
             app:layout_constraintBottom_toBottomOf="parent" />
 
 
