--- a/presentation/src/main/res/layout/fragment_team.xml
+++ b/presentation/src/main/res/layout/fragment_team.xml
@@ -11,5 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/team_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="24dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:recyclerView="@{vm.teamAdapter}" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
