--- a/presentation/src/main/res/layout/fragment_search_player.xml
+++ b/presentation/src/main/res/layout/fragment_search_player.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <data>
         <variable
             name="vm"
@@ -42,8 +43,9 @@
                 android:id="@+id/search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="#00000000"
+                android:background="#00000000"
                 android:onClick="@{() ->vm.onSearchClick()}"
                 android:text="search"
                 android:textColor="@color/black"
