--- a/presentation/src/main/res/layout/item_detail_player.xml
+++ b/presentation/src/main/res/layout/item_detail_player.xml
@@ -20,7 +20,6 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="30sp"
-            android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -31,9 +30,8 @@
             android:id="@+id/game_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/season_year"
-            tools:layout_editor_absoluteX="0dp">
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/season_year">
 
             <TextView
                 android:id="@+id/games"
@@ -101,7 +99,7 @@
             android:id="@+id/basic_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/game_layout"
             tools:layout_editor_absoluteX="0dp">
 
@@ -170,7 +168,7 @@
             android:id="@+id/middle_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@+id/basic_layout"
             tools:layout_editor_absoluteX="16dp">
 
@@ -226,7 +224,7 @@
             android:id="@+id/three_point_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@+id/middle_layout"
             tools:layout_editor_absoluteX="16dp">
 
@@ -281,7 +279,7 @@
             android:id="@+id/rebound_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@+id/three_point_layout"
             tools:layout_editor_absoluteX="16dp">
 
@@ -336,7 +334,7 @@
             android:id="@+id/free_throw_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@+id/rebound_layout"
             tools:layout_editor_absoluteX="16dp">
 
@@ -370,7 +368,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="FTA\n7.19" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/ft_rate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
