--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/stats"
+                android:text="Stats"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"/>
