--- a/presentation/src/main/res/layout/item_game_list.xml
+++ b/presentation/src/main/res/layout/item_game_list.xml
@@ -13,7 +13,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="10dp">
+        android:background="@drawable/recycler_bottom_line"
+        android:layout_marginBottom="10dp">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,7 +28,7 @@
                 android:id="@+id/home_team"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:textColor="@color/black"
                 android:backgroundTint="@color/white"
                 app:imageBinding="@{repo.homeTeam.homeTeamId}"
@@ -39,7 +40,7 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:text="@{repo.homeTeamScore}"
                 android:textColor="@color/black"
                 android:textSize="25sp"
@@ -73,7 +74,7 @@
                 android:id="@+id/visitor_team"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:textColor="@color/black"
                 android:backgroundTint="@color/white"
                 app:imageBinding="@{repo.visitorTeam.visitorId}"
