--- a/presentation/src/main/res/layout/item_game_player.xml
+++ b/presentation/src/main/res/layout/item_game_player.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -30,7 +31,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="12dp"
-                app:imageBinding="@{repo.playerInfo.teamId}"
+                app:imageBinding="@{repo.teamInfo.teamId}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -72,10 +73,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:gravity="center"
                 android:text="@{repo.assist}"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/team_name"
                 app:layout_constraintStart_toEndOf="@+id/weight"
@@ -87,10 +88,10 @@
                 android:layout_width="95dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:gravity="center"
                 android:text="@{repo.rebound}"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/assist"
