--- a/presentation/src/main/res/layout/item_player.xml
+++ b/presentation/src/main/res/layout/item_player.xml
@@ -34,7 +34,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:text="@{repo.height}"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
