--- a/presentation/src/main/res/layout/activity_game_stats_detail.xml
+++ b/presentation/src/main/res/layout/activity_game_stats_detail.xml
@@ -19,7 +19,9 @@
             android:id="@+id/top_layout"
             android:layout_width="match_parent"
             android:layout_height="90dp"
+            android:layout_marginBottom="14dp"
             android:background="@drawable/recycler_bottom_line"
+            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -62,9 +64,13 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ScrollView
+            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/top_layout">
 
             <androidx.constraintlayout.widget.ConstraintLayout
