--- a/presentation/src/main/res/drawable/recycler_bottom_line.xml
+++ b/presentation/src/main/res/drawable/recycler_bottom_line.xml
@@ -9,7 +9,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="1dp"
-                android:color="#000000" />
+                android:color="#BAAEAE" />
 
             <solid android:color="#FFF" />
         </shape>
