--- a/presentation/src/main/res/layout/item_game_player.xml
+++ b/presentation/src/main/res/layout/item_game_player.xml
@@ -18,6 +18,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/team_image"
+            android:background="@drawable/recycler_bottom_line"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="15dp"
