--- a/presentation/src/main/res/layout/item_team.xml
+++ b/presentation/src/main/res/layout/item_team.xml
@@ -9,8 +9,9 @@
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main_item"
+        android:background="@drawable/recycler_bottom_line"
+        android:padding="5dp"
         android:layout_width="match_parent"
-        android:background="@color/white"
         android:layout_height="60dp"
         android:layout_marginBottom="5dp">
 
