--- a/presentation/src/main/res/layout/activity_player_detail.xml
+++ b/presentation/src/main/res/layout/activity_player_detail.xml
@@ -18,6 +18,7 @@
             android:id="@+id/profile_layout"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:background="@drawable/recycler_bottom_line"
             android:layout_marginTop="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +96,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:fillViewport="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
