🐛:: change calender size

--- a/presentation/src/main/res/layout/fragment_calender.xml
+++ b/presentation/src/main/res/layout/fragment_calender.xml
@@ -16,13 +16,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/recycler_bottom_line"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                 android:id="@+id/cv_calendar"
                 android:layout_width="match_parent"
-                android:layout_height="350dp"
+                android:layout_height="300dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
