--- a/presentation/src/main/res/layout/activity_team_game_list.xml
+++ b/presentation/src/main/res/layout/activity_team_game_list.xml
@@ -26,7 +26,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_round_arrow_back_24"
-                android:background="@color/white"
+                android:background="#00000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/team_year_tv"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
                 android:id="@+id/plus_year_btn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="@color/white"
+                android:background="#00000000"
                 android:src="@drawable/ic_round_arrow_forward_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
