🐛:: change input type

--- a/presentation/src/main/res/layout/fragment_search_player.xml
+++ b/presentation/src/main/res/layout/fragment_search_player.xml
@@ -30,6 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="32dp"
+                android:inputType="text"
                 android:hint="검색어를 입력해주세요"
                 android:padding="10dp"
                 android:textColor="@color/black"
